Added metadata and data API
Added implementations of metadata and data API. Also refactored context holder from session to DBConnection.
