# be/src/main/java/com/ataccama/dbadger/controller/DBMetadataController.java
@@ -1,25 +1,22 @@
 package com.ataccama.dbadger.controller;
 
+import com.ataccama.dbadger.domain.DBColumn;
 import com.ataccama.dbadger.domain.DBSchema;
+import com.ataccama.dbadger.domain.DBTable;
 import com.ataccama.dbadger.service.metadata.DBMetadataService;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.core.io.Resource;
 import org.springframework.http.MediaType;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.util.Assert;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 
 @RestController
+@CrossOrigin(origins = "http://localhost")
 @RequestMapping(path = "/connections/{id}/metadata", produces = {MediaType.APPLICATION_JSON_VALUE})
 public class DBMetadataController {
 
     private final DBMetadataService metadataService;
-
-    @Value("classpath:swagger/metadata.yaml")
-    Resource swagger;
 
     @Autowired
     public DBMetadataController(DBMetadataService metadataService) {
@@ -27,7 +24,21 @@ public class DBMetadataController {
     }
 
     @GetMapping(path = "/schemas")
-    public List<DBSchema> getAllSchemas() {
+    public List<DBSchema> getAllSchemas(@PathVariable Long id) {
+        Assert.notNull(id, "id must not be null");
        return metadataService.findAllSchemas();
+    }
+
+    @GetMapping(path = "/tables")
+    public List<DBTable> getAllTables(@PathVariable Long id) {
+        Assert.notNull(id, "id must not be null");
+        return metadataService.findAllTables();
+    }
+
+    @GetMapping(path = "/tables/{name}/columns")
+    public List<DBColumn> getColumns(@PathVariable Long id, @PathVariable String name) {
+        Assert.notNull(id, "id must not be null");
+        Assert.notNull(name, "table name must not be null");
+        return metadataService.findColumns(name);
     }
 }
